# daily-feed-digest

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: daily.yml
src/: __init__.py  config.py  main.py  output.py  summarizer.py
src/fetchers/: __init__.py  github.py  reddit.py  slack.py  twitter.py
